[ELY-2496] Modify commands to support JDK 8
Due to ELY-2514, this module must be compiled for Java 8. This commit
can be reversed or reverted once this issue is fixed.